tests/__snapshots__/config-failFast---failFast-false-stderr.snap.txt
Error: The source type is 'number'.

  1 | import { expect, test } from "tstyche";
  2 | test("is number?", () => {
  3 |   expect<number>().type.not.toBeNumber();
    |                             ~~~~~~~~~~
  4 |   expect<number>().type.not.toBeNumber();
  5 | });
  6 | 

      at ./__typetests__/isNumber.tst.ts:3:29 ❭ is number?

Error: The source type is 'number'.

  2 | test("is number?", () => {
  3 |   expect<number>().type.not.toBeNumber();
  4 |   expect<number>().type.not.toBeNumber();
    |                             ~~~~~~~~~~
  5 | });
  6 | 

      at ./__typetests__/isNumber.tst.ts:4:29 ❭ is number?

Error: The source type is 'string'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
  3 |   expect<string>().type.not.toBeString();
    |                             ~~~~~~~~~~
  4 |   expect<string>().type.not.toBeString();
  5 | });
  6 | 

      at ./__typetests__/isString.tst.ts:3:29 ❭ is string?

Error: The source type is 'string'.

  2 | test("is string?", () => {
  3 |   expect<string>().type.not.toBeString();
  4 |   expect<string>().type.not.toBeString();
    |                             ~~~~~~~~~~
  5 | });
  6 | 

      at ./__typetests__/isString.tst.ts:4:29 ❭ is string?

